@@ -26,6 +26,8 @@
 #ifndef WebPlatformStrategies_h
 #define WebPlatformStrategies_h
 
+#if USE(PLATFORM_STRATEGIES)
+
 #include <WebCore/PlatformStrategies.h>
 #include <WebCore/PluginStrategy.h>
 
@@ -47,5 +49,7 @@ private:
 };
 
 } // namespace WebKit
+
+#endif // USE(PLATFORM_STRATEGIES)
 
 #endif // WebPlatformStrategies_h
